--- a/container/openejb-core/pom.xml
+++ b/container/openejb-core/pom.xml
@@ -313,7 +313,7 @@
             -Dopenejb.classloader.forced-load=org.apache.openejb
             -enableassertions
             -Dopenejb.descriptors.output.folder=./dump/
-            -Xmx256m -Djava.endorsed.dirs=${openejb.build.endorsed}
+            -Djava.endorsed.dirs=${openejb.build.endorsed}
           </argLine>
           <workingDirectory>${basedir}/target</workingDirectory>
           <systemPropertyVariables>
@@ -687,7 +687,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-              <!--<reuseForks>false</reuseForks>-->
+              <reuseForks>false</reuseForks>
               <argLine>"-javaagent:${basedir}/target/openejb-javaagent-${project.version}.jar" -Xdebug
                 -Xnoagent -Djava.compiler=NONE
                 -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005
