Sure I commented that out yesterday?
git-svn-id: https://svn.apache.org/repos/asf/tomee/tomee/branches/tomee-1.7.x@1610962 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/projectstage-demo/pom.xml
+++ b/examples/projectstage-demo/pom.xml
@@ -88,7 +88,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.17</version>
         <configuration>
-          <skipTests>false</skipTests>
+          <!--skipTests>false</skipTests-->
           <!--
 TODO: remove the skipTests flag. I needed to do it because it was throwing this exception.
 Test set: org.superbiz.projectstage.TestingProjectStageTest
