Could it be this
git-svn-id: https://svn.apache.org/repos/asf/tomee/tomee/branches/tomee-1.7.x@1611207 13f79535-47bb-0310-9956-ffa450edef68

--- a/container/openejb-core/pom.xml
+++ b/container/openejb-core/pom.xml
@@ -308,7 +308,8 @@
         <configuration>
           <reuseForks>false</reuseForks>
           <testNGArtifactName>none:none</testNGArtifactName>
-          <argLine> <!-- "-javaagent:${basedir}/target/openejb-javaagent-${project.version}.jar" -->
+          <argLine> 
+            -javaagent:${basedir}/target/openejb-javaagent-${project.version}.jar
             -Dopenejb.classloader.forced-skip=org.apache.openejb.jee.,org.apache.openejb.api.
             -Dopenejb.classloader.forced-load=org.apache.openejb
             -enableassertions
