Test on available ports. Merged some test fixes from Romain
git-svn-id: https://svn.apache.org/repos/asf/tomee/tomee/branches/tomee-1.7.x@1611467 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/moviefun/pom.xml
+++ b/examples/moviefun/pom.xml
@@ -73,7 +73,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.17</version>
         <configuration>
-          <forkMode>always</forkMode>
+          <reuseForks>false</reuseForks> <!-- otherwise openejb embedded and tomee embedded shares the same context and EJBContainer is broken -->
         </configuration>
       </plugin>
       <plugin>
