--- a/arquillian/arquillian-tomee-remote/pom.xml
+++ b/arquillian/arquillian-tomee-remote/pom.xml
@@ -163,6 +163,13 @@
       <version>3.1</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.sirona</groupId>
+      <artifactId>sirona-web</artifactId>
+      <version>0.2-incubating</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
