@Ignore - just need to know if we get past it?
git-svn-id: https://svn.apache.org/repos/asf/tomee/tomee/branches/tomee-1.7.x@1612394 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/deltaspike-fullstack/pom.xml
+++ b/examples/deltaspike-fullstack/pom.xml
@@ -55,6 +55,7 @@
         <configuration> <!-- optional -->
           <systemPropertyVariables>
             <openejb.jul.forceReload>true</openejb.jul.forceReload>
+            <logging.level.OpenEJB.startup>FINEST</logging.level.OpenEJB.startup>
           </systemPropertyVariables>
           <reuseForks>false</reuseForks>
         </configuration>
