Fix TCK server port - The server is extracted to target and the generated port written to the server.xml On the next iteration the generated port is NOT always the same as the one if the server.xml - We just get lucky sometimes. The ServerLocal util/ServerLocal.java now used in containers checks for the server.xml, so the TCK then uses this port if found.
The RemoteServer now attempts a process waitfor and fails fast if the waitfor times out. There is no more danger of a process leak or hang until the buildbot times out.



git-svn-id: https://svn.apache.org/repos/asf/tomee/tomee/branches/tomee-1.7.x@1612803 13f79535-47bb-0310-9956-ffa450edef68

--- a/tck/tck-common/pom.xml
+++ b/tck/tck-common/pom.xml
@@ -61,6 +61,11 @@
       <artifactId>webdeployer</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.openejb</groupId>
+      <artifactId>tomee-util</artifactId>
+      <version>${tomee.version}</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
