--- a/maven/tomee-webapp-archetype/pom.xml
+++ b/maven/tomee-webapp-archetype/pom.xml
@@ -27,4 +27,28 @@ Licensed to the Apache Software Foundation (ASF) under one or more
 
   <artifactId>tomee-webapp-archetype</artifactId>
   <name>OpenEJB :: Maven Plugins :: TomEE Webapp Archetype</name>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>remove-apps</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target>
+                <replace file="${project.build.directory}/classes/archetype-resources/pom.xml" token="[VERSION]" value="${project.version}"/>
+                </target>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
