Fix archetype-resources/pom.xml more
git-svn-id: https://svn.apache.org/repos/asf/tomee/tomee/branches/tomee-1.7.x@1612818 13f79535-47bb-0310-9956-ffa450edef68

--- a/maven/tomee-webapp-archetype/pom.xml
+++ b/maven/tomee-webapp-archetype/pom.xml
@@ -42,7 +42,8 @@ Licensed to the Apache Software Foundation (ASF) under one or more
             </goals>
             <configuration>
               <target>
-                <replace file="${project.build.directory}/classes/archetype-resources/pom.xml" token="[VERSION]" value="${project.version}"/>
+                <replace file="${project.build.directory}/classes/archetype-resources/pom.xml" token="[TOMEE]" value="${project.version}"/>
+                <replace file="${project.build.directory}/classes/archetype-resources/pom.xml" token="[OPENEJB]" value="${openejb.version}"/>
                 </target>
             </configuration>
           </execution>
