--- a/maven/tomee-webapp-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/maven/tomee-webapp-archetype/src/main/resources/archetype-resources/pom.xml
@@ -42,13 +42,13 @@
     <dependency>
       <groupId>org.apache.openejb</groupId>
       <artifactId>arquillian-tomee-remote</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>[TOMEE]</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.arquillian.junit</groupId>
       <artifactId>arquillian-junit-container</artifactId>
-      <version>1.1.2.Final</version>
+      <version>1.1.5.Final</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -63,13 +63,13 @@
     <dependency>
       <groupId>org.apache.openejb</groupId>
       <artifactId>arquillian-openejb-embedded-4</artifactId>
-      <version>4.7.0-SNAPSHOT</version>
+      <version>[OPENEJB]</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.arquillian.junit</groupId>
       <artifactId>arquillian-junit-container</artifactId>
-      <version>1.1.2.Final</version>
+      <version>1.1.5.Final</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -104,7 +104,7 @@
       <plugin>
         <groupId>org.apache.openejb.maven</groupId>
         <artifactId>tomee-maven-plugin</artifactId>
-        <version>[VERSION]</version>
+        <version>[TOMEE]</version>
         <configuration>
           <context>ROOT</context>
         </configuration>
