Process resources required by tests before tests. Use a fixed RemoteTomEEEJBContainerIT
git-svn-id: https://svn.apache.org/repos/asf/tomee/tomee/branches/tomee-1.7.x@1613061 13f79535-47bb-0310-9956-ffa450edef68

--- a/tomee/apache-tomee/pom.xml
+++ b/tomee/apache-tomee/pom.xml
@@ -165,7 +165,7 @@
         <executions>
           <execution>
             <id>filter-resources</id>
-            <phase>prepare-package</phase>
+            <phase>process-resources</phase>
             <goals>
               <goal>resources</goal>
             </goals>
@@ -178,7 +178,7 @@
         <executions>
           <execution>
             <id>copy-tomcat-for-webprofile</id>
-            <phase>prepare-package</phase>
+            <phase>process-resources</phase>
             <goals>
               <goal>copy</goal>
             </goals>
@@ -197,7 +197,7 @@
           </execution>
           <execution>
             <id>copy-tomcat-for-jaxrs</id>
-            <phase>prepare-package</phase>
+            <phase>process-resources</phase>
             <goals>
               <goal>copy</goal>
             </goals>
@@ -216,7 +216,7 @@
           </execution>
           <execution>
             <id>copy-tomcat-for-plus</id>
-            <phase>prepare-package</phase>
+            <phase>process-resources</phase>
             <goals>
               <goal>copy</goal>
             </goals>
@@ -235,7 +235,7 @@
           </execution>
           <execution>
             <id>copy-tomcat-for-plume</id>
-            <phase>prepare-package</phase>
+            <phase>process-resources</phase>
             <goals>
               <goal>copy</goal>
             </goals>
